--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -53,6 +53,8 @@
     --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
+$base-path: ".";  // This will be adjusted by Quarto during build
+
 /* -----------------------------
    Base Styles
    ---------------------------- */
