Some Styling changes

--- a/website/scss/_variables.scss
+++ b/website/scss/_variables.scss
@@ -10,7 +10,7 @@ $primary-dark: #d93964;
 $primary-light: #f37396;
 
 // Secondary colors provide supporting palette
-$secondary: #2d3748;
+$secondary: #510e74;
 $secondary-light: #4a5568;
 $secondary-dark: #1a202c;
 
